fix: fix the dark mode display & switch problem

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -64,8 +64,8 @@
 
 body {
   min-height: 100vh;
-  color: var(--color-text);
-  background: var(--color-background);
+  /* color: var(--color-text); */
+  /* background: var(--color-background); */
   /* background-color: #fefefe; */
   transition:
     color 0.5s,
